--- a/inputs.html
+++ b/inputs.html
@@ -1,3 +1,34 @@
 <!-- radio button -->
 <!-- select tag -->
 <!-- textarea tag -->
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Inputs Demo</title>
+</head>
+<body>
+	<p>Do you prefer cats or dogs?</p>
+	<form>
+		<label for="dogs">Dogs:</label>
+		<input name="petChoice" id="dogs" type="radio" value="DOGS">
+
+		<label for="cats">Cats:</label>
+		<input name="petChoice" id="cats" type="radio" value="CATS">
+
+		<p>What is your current mood?</p>
+
+		<select name="mood">
+			<option value="HAPPY">:)</option>
+			<option value="MEH">:/</option>
+			<option value="SAD">:(</option>
+		</select><br>
+
+		<textarea name="paragraph" rows="10" cols="50"></textarea><br>
+
+
+		<button>Go!</button>
+	</form>
+
+
+</body>
+</html>
