--- a/bootstrap/gallery.html
+++ b/bootstrap/gallery.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
-	<div class="container">
+	<div class="containler">
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
 	        <span classl="sr-only">Toggle navigation</span>
