--- a/Bootstrap 4 Flexbox/Cryptid/index.html
+++ b/Bootstrap 4 Flexbox/Cryptid/index.html
@@ -29,6 +29,26 @@
           </div>
       </nav>
 
+      <section class="container-fluid px-0">
+          <div class="row align-items-center">
+              <div class="col-lg-6">
+                  <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
+                        <h1 class="text-center display-2">MUSEUM<span>/</span>OF<span>/</span>CRYPTIDS</h1>
+                        <h1 class="text-center display-2">MUSEUM<span>/</span>OF<span>/</span>CRYPTIDS</h1>
+                        <h1 class="text-center display-2">MUSEUM<span>/</span>OF<span>/</span>CRYPTIDS</h1>
+                        <h1 class="text-center display-2">MUSEUM<span>/</span>OF<span>/</span>CRYPTIDS</h1>
+                        <h1 class="text-center display-2">MUSEUM<span>/</span>OF<span>/</span>CRYPTIDS</h1>
+                        <h1 class="text-center display-2">MUSEUM<span>/</span>OF<span>/</span>CRYPTIDS</h1>
+                        <h1 class="text-center display-2">MUSEUM<span>/</span>OF<span>/</span>CRYPTIDS</h1>
+                  </div>
+
+              </div>
+              <div class="col-lg-6">
+                  <img class="img-fluid" src="https://images.unsplash.com/photo-1448375240586-882707db888b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80">
+              </div>
+          </div>
+      </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
