--- a/Bootstrap 4 Flexbox/Cryptid/index.html
+++ b/Bootstrap 4 Flexbox/Cryptid/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="app.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <title>Museum of Cryptid</title>
   </head>
   <body>
@@ -49,10 +50,69 @@
           </div>
       </section>
 
+      <section class="container-fluid px-0">
+            <div class="content row text-center align-items-center">
+              <div class="col-md-6 order-2 order-md-1 blurb">
+                  <img src="https://i.pinimg.com/474x/a7/dc/06/a7dc06ac79343e439e045cbc03816f9b--monster-illustration-illustration-design.jpg">
+              </div>
+              <div class="col-md-6 order-1 order-md-2">
+                  <div class="row justify-content-center">
+                      <div class="col-10 col-lg-8 blurb mb-5 mb-m-0">
+                            <h2>Museum of Crytids</h2>
+                            <p class="display-3 d-none d-lg-inline"><i class="fas fa-question"></i></p>
+                            <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, velit ipsam esse voluptas corporis porro. Dignissimos ad voluptates minima natus?</p>
+                      </div>
+                  </div>
+
+              </div>
+          </div>
+          <section class="container-fluid px-0">
+                <div class="row text-center align-items-center">
+                <div class="col-md-6 blurb">
+                        <div class=" row justify-content-center">
+                            <div class="col-10 col-lg-8 blurb">
+                                  <h2>Museum of Crytids</h2>
+                                  <p class="display-3 d-none d-lg-inline"><i class="fas fa-question"></i></p>
+                                  <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, velit ipsam esse voluptas corporis porro. Dignissimos ad voluptates minima natus?</p>
+                            </div>
+                        </div>
+                    </div>
+
+                  <div class="content col-md-6 blurb">
+                      <img src="https://i.pinimg.com/474x/a7/dc/06/a7dc06ac79343e439e045cbc03816f9b--monster-illustration-illustration-design.jpg">
+                  </div>
+              </div>
+          <section class="container-fluid px-0">
+                <div class="content row text-center align-items-center">
+                  <div class="col-md-6 order-2 order-md-1 blurb">
+                      <img src="https://i.pinimg.com/474x/a7/dc/06/a7dc06ac79343e439e045cbc03816f9b--monster-illustration-illustration-design.jpg">
+                  </div>
+                  <div class="col-md-6 order-1 order-md-2">
+                      <div class="row justify-content-center">
+                          <div class="col-10 col-lg-8 blurb">
+                                <h2>Museum of Crytids</h2>
+                                <p class="display-3 d-none d-lg-inline"><i class="fas fa-question"></i></p>
+                                <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, velit ipsam esse voluptas corporis porro. Dignissimos ad voluptates minima natus?</p>
+                          </div>
+                      </div>
+    
+                  </div>
+              </div>
+      </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    <script>
+        $(function () {
+      $(document).scroll(function () {
+        var $nav = $("#mainNavbar");
+        $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
+      });
+    });
+    </script>
+  
+</body>
 </html>
