--- a/JavaScript/Section13_Array/todo.html
+++ b/JavaScript/Section13_Array/todo.html
@@ -17,6 +17,7 @@
         <ul>
             <li>"new" - Add a Todo</li>
             <li>"list" - View all todos</li>
+            <li>"delete" - Remove Specific Todo</li>
             <li>"quit" - Quit App</li>
         </ul>
         </ul>
