--- a/color-game/colorGame.html
+++ b/color-game/colorGame.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Color Game</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="colorGame.css">
@@ -17,6 +17,8 @@
         <div id="stripe">
             <button id="reset">New Colors</button>
             <span id="message"></span>
+            <button id="easyBtn">Easy</button>
+            <button id="hardBtn">Hard</button>
             
         </div>
 
@@ -24,9 +26,9 @@
             <div class="square"></div>
             <div class="square"></div>
             <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
+            <div class="square" class ="hide"></div>
+            <div class="square" class ="hide"></div>
+            <div class="square" class ="hide"></div>
         </div>
 
         
