--- a/color-game/colorGame.html
+++ b/color-game/colorGame.html
@@ -10,15 +10,21 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="colorGame.css">
+        <link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>GUESS THE <span id="rgbDisplay">RGB</span> COLOR</h1>
+        <h1>GUESS THE 
+        <br> 
+            <span id="rgbDisplay">RGB</span> 
+        <br>    
+            COLOR
+        </h1>
         
         <div id="stripe">
             <button id="reset">New Colors</button>
             <span id="message"></span>
-            <button id="easyBtn">Easy</button>
-            <button id="hardBtn">Hard</button>
+            <button class="mode">Easy</button>
+            <button class="mode">Hard</button>
             
         </div>
 
